Оформление всех декоративных эффектов для страниц Студия и Портфолио.
Для всех эффектов ховера и фокуса сделаны переходы.  Выполнено подчёркивание текущей ссылки.
В секции Портфолио, синий оверлей с текстом поверх изображения выезжает снизу изображения

--- a/index.html
+++ b/index.html
@@ -132,31 +132,25 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
 
           <ul class="profile list">
-            <li class="items">
-              <img
-                src="./images/occupation/img-leptop.jpg"
-                alt="приложения"
-                width="370"
-                height="294"
-              />
+            <li class="product-items">
+              <img src="./images/occupation/img-leptop.jpg" alt="приложения"
+                width="370" height="294">
               <h3 class="subtitle">Десктопные приложения</h3>
             </li>
-            <li class="items">
+            <li class="product-items">
               <img
                 src="./images/occupation/img-telefon.jpg"
                 alt="мобильные приложения"
                 width="370"
-                height="294"
-              />
+                height="294">
               <h3 class="subtitle">Мобильные приложения</h3>
             </li>
-            <li class="items">
+            <li class="product-items">
               <img
                 src="./images/occupation/img-monitor.jpg"
                 alt="дизайнерские решения"
                 width="370"
-                height="294"
-              />
+                height="294">
               <h3 class="subtitle">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -348,66 +342,67 @@
 
           <ul class="customers list">
             <li class="icon">
-              <div class="logo-icon">
-             <a>
+              <!-- <div class="logo-icon"> -->
+             <a href aria-label="Лого компании 1" class="clients-title">
                <svg class="company-logo" 
                width="45"
                height="50">
-                 <use href="./images/sprite.svg#icon-company-1">
+                 <use href="./images/sprite.svg#icon-company-1" width="45"
+               height="50">
                  </use>
                </svg>
              </a>
-            </div>
+            <!-- </div> -->
             </li>
             <li class="icon">
-              <div class="logo-icon">
+              <!-- <div class="logo-icon"> -->
               <a>
                 <svg class="company-logo" width="40" height="52">
                   <use href="./images/sprite.svg#icon-company-2">
                   </use>
                 </svg>
               </a>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="icon">
-              <div class="logo-icon">
+              <!-- <div class="logo-icon"> -->
               <a>
                 <svg class="company-logo" width="41" height="42">
                   <use href="./images/sprite.svg#icon-company-3">
                   </use>
                 </svg>
               </a>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="icon">
-              <div class="logo-icon">
+              <!-- <div class="logo-icon"> -->
             <a>
               <svg class="company-logo" width="80" height="42">
                 <use href="./images/sprite.svg#icon-company-4">
                 </use>
               </svg>
             </a>
-            </div>
+            <!-- </div> -->
             </li>
             <li class="icon">
-              <div class="logo-icon">
+              <!-- <div class="logo-icon"> -->
               <a>
                 <svg class="company-logo" width="59" heihht="47">
                   <use href="./images/sprite.svg#icon-company-5">
                   </use>
                 </svg>
               </a>
-              </div>
+              <!-- </div> -->
             </li>
             <li class="icon">
-              <div class="logo-icon">
+              <!-- <div class="logo-icon"> -->
               <a>
                 <svg class="company-logo" width="88" heihht="46">
                   <use href="./images/sprite.svg#icon-company-6">
                   </use>
                 </svg>
               </a>
-              </div>
+              <!-- </div> -->
             </li>
           </ul>
         </div>
