--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
     <!--Заголовок-->
@@ -32,7 +32,7 @@
                 <a href="index.html" class="link">Студия</a>
               </li>
               <li class="item">
-                <a href="po" class="link current">Портфолио</a>
+                <a href="portfolio.html" class="link current">Портфолио</a>
               </li>
               <li class="item"><a href="" class="link">Контакты</a></li>
             </ul>
@@ -78,7 +78,7 @@
             <ul class="web-list list">
               <!--Веб-сайт-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/texno.jpg"
                     alt="Лица"
@@ -99,7 +99,7 @@
 
               <!--Постер-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/veb.jpg"
                     alt="Дизайн"
@@ -120,7 +120,7 @@
 
               <!--Ресторан-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/restaurant.jpg"
                     alt="Ресторан"
@@ -141,7 +141,7 @@
 
               <!--Маркетинг-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/headphones.jpg"
                     alt="Наушники"
@@ -162,7 +162,7 @@
 
               <!--Приложение-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/box.jpg"
                     alt="Коробки"
@@ -183,7 +183,7 @@
 
               <!--Монитор-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/monitor.jpg"
                     alt="Монитор"
@@ -204,7 +204,7 @@
 
               <!--Журнал-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/magazine.jpg"
                     alt="Журнал"
@@ -225,7 +225,7 @@
 
               <!--Ярлык-->
               <li class="block">
-                <a href="" class="link">
+                <a href="" class="servises">
                   <img
                     src="./images/portfolio/label.jpg"
                     alt="Ярлык"
@@ -246,7 +246,7 @@
 
               <!--Ноут-->
               <li class="block">
-                <a href="" class="link list">
+                <a href="" class="servises list">
                   <img
                     src="./images/portfolio/laptop.jpg"
                     alt="Ноутбук"
