Переделаны кнопки в Портфолио

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <li class="icon">
               <!-- <div class="logo-icon"> -->
               <a>
-                <svg class="company-logo" width="59" heihht="47">
+                <svg class="company-logo" width="59" height="47">
                   <use href="./images/sprite.svg#icon-company-5">
                   </use>
                 </svg>
@@ -397,7 +397,7 @@
             <li class="icon">
               <!-- <div class="logo-icon"> -->
               <a>
-                <svg class="company-logo" width="88" heihht="46">
+                <svg class="company-logo" width="88" height="46">
                   <use href="./images/sprite.svg#icon-company-6">
                   </use>
                 </svg>
