--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <a href="" class="button-primary">Заказать услугу</a>
+        <a href="" class="button-primary1">Заказать услугу</a>
       </section>
 
       <!--Преимущества-->
@@ -467,7 +467,7 @@
 
       <div class="subscribe">
         <a class="button-primary">Подписаться
-          <svg class="button-subscribe">
+          <svg class="button-subscribe" width="24" height="24">
             <use href="./images/sprite.svg#icon-icon-send"></use>
           </svg>
         </a>
