--- a/portfolio.html
+++ b/portfolio.html
@@ -345,7 +345,7 @@
           <div class="subscribe">
             <a class="button-primary"
               >Подписаться
-              <svg class="button-subscribe">
+              <svg class="button-subscribe" width="24" height="24">
                 <use href="./images/sprite.svg#icon-icon-send"></use>
               </svg>
             </a>
